--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["rc"]
+rc = []
+arc = []
+
 [dev-dependencies]
 predicate-macros = { git = "https://github.com/Spxg/predicate-macros.git", branch = "master" }
 # predicate-macros = { path = "../predicate-macros" }
